fix(search) Larger bottom spacing on search page

--- a/site/web/app/themes/sage/assets/styles/common/_global.scss
+++ b/site/web/app/themes/sage/assets/styles/common/_global.scss
@@ -1139,6 +1139,10 @@ h4.modal-title {
   text-decoration: none;
 }
 
+#search-page-section {
+    margin-bottom: 80px;
+}
+
 @include media-breakpoint-down(sm) {
   .algolia-autocomplete {
     width: 100% !important;
